syntax = "proto3";

package user;
option go_package="./user";

message Response{
  string errMsg = 1;
  string code = 2;
  string message = 3;
}

/*
  * 注册业务
 */
message RegisterReq{
  int64 mobile = 1;
  string name = 2;
  string password = 3;
  string jwtSecret = 4;
  int64 seconds = 5;
}
message RegisterRes{
  Response result = 1;
  int64 userId = 2;
  string token = 3;
}
service UserRegister{
  rpc Register(RegisterReq) returns (RegisterRes);
}
